# Onyx

./: .clang-format  .clang-tidy  .directory  .gdbinit  .git-blame-ignore-revs  .gitignore  .gitmodules  .mailmap  BUILD.gn  FIXING_NOTES  Kernel-demang.map  Kernel.map  LICENSE  Makefile  README.md  a.out  bochsrc.txt  build.sh  build_dash.sh  build_packages.sh  build_toolchain.sh  c99_to_c89.sh  change_to_c86.sh  clean.sh  cleanuptree.sh  compile_commands.json  config.sh  cpuid.c  daemon  default-host.sh  default-initrd.sh  findaddress.sh  first_spartix_packet_to_linux.pcapng  fstab  gen_password_hash.cpp  geninitrd  gitcommitandpush.sh  hdd.img  hostname  indent.sh  (+21 more)
kernel/: .gitignore  BUILD.gn  Kconfig  Makefile  build.txt  generate_syscall_bits.py  kernel.config  kernel.config.example  kernel.config.mine  kernel.config.mine.arm64  kernel.config.mine.riscv  kernel.config.minimal  onyx.9  vmspartix
kernel/acpica/: BUILD.gn  Makefile
kernel/acpica/common/: ahtable.c  dmtable.c  dmtbinfo.c
kernel/acpica/compiler/: aslcompile.c  aslcompiler.h  aslcompiler.l  aslglobal.h  aslhelp.c  aslmain.c  asloptions.c  aslparseop.c  aslresource.c  aslrules.y  asltokens.y  asltransform.c  asltree.c  asltypes.h  aslutils.c  dtcompiler.h  dtfield.c  dttemplate.h  dtutils.c
kernel/acpica/include/: amlresrc.h
kernel/arch/: Kconfig
kernel/arch/arm64/: Kconfig  Makefile  copy_user.S  early_mmu.c  elf.c  entry.cpp  fpu.cpp  gic.cpp  image.S  interrupts.S  irq.cpp  linker.ld  make.config  mmu.cpp  panic.cpp  pgtable.c  process.c  process.cpp  scheduler.cpp  signal.cpp  stubs.cpp  switch.cpp  syscall.c  syscall.cpp  syscall_table.json  thread.c  timer.cpp  traps.c  traps.cpp  usercopy.c  usercopy.cpp  vdso_helper.S  virt-uart.cpp
kernel/arch/i386/: arch.c  arch.cpp  arch.o.S  boot.S  cpu.c  crti.S  crtn.S  debug.c  debug.cpp  debug.o.S  desc_load.S  gdt.c  gdt.cpp  gdt.o.S  idt.c  idt.cpp  idt.o.S  interrupts.S  irq.c  irq.cpp  irq.o.S  isr_handler.c  isr_handler.cpp  isr_handler.o.S  linker.ld  make.config  nmi.cpp  paging_asm.S  pic.c  pic.cpp  pic.o.S  pit.c  pit.cpp  pit.o.S  rtc.cpp  scheduler.S  sleep.c  sse.S  syscall.c  syscall.cpp  (+10 more)
kernel/arch/riscv64/: Kconfig  Makefile  __vdso.c  code_patch.cpp  copy_user.S  cpu.cpp  debug.cpp  early_paging.c  entry.cpp  fpu.cpp  fpu_state.S  image.S  interrupts.S  linker.ld  make.config  mmu.cpp  plic.cpp  power.cpp  process.cpp  sbi.cpp  scheduler.cpp  signal.cpp  smp.cpp  stubs.cpp  syscall.cpp  syscall_table.json  time.cpp  traps.cpp  usercopy.cpp  vdso_helper.S  virt-uart.cpp
kernel/arch/x86_64/: BUILD.gn  Kconfig  Makefile  Paging.cpp  __vdso.c  __vdso_asm.S  alternatives.cpp  apic.c  apic.cpp  atomic.c  avx.c  avx.cpp  boot.S  bug.cpp  code_patch.cpp  copy.S  copy_user.S  cpu.c  cpu.cpp  crc32.cpp  crti.S  crtn.S  debug.c  debug.cpp  desc_load.S  disassembler.c  disassembler.cpp  efi.cpp  entry.S  exit.S  fentry.S  fpu.c  fpu.cpp  gdt.c  gdt.cpp  hpet.cpp  idt.c  idt.cpp  idt.cppc  interrupts.S  (+64 more)
kernel/configs/: kernel.config.arm64  kernel.config.riscv  kernel.config.x86_64
kernel/crypt/: Makefile  sha256.c
kernel/drivers/: BUILD.gn  Kconfig  Makefile  build-helper.config  make.config
kernel/drivers/acpi/: Kconfig  Makefile  acpi.cpp  acpi_osl.cpp
kernel/drivers/ahci/: BUILD.gn  Kconfig  Makefile  ahci.c  ahci.cpp
kernel/drivers/ata/: BUILD.gn  Kconfig  Makefile  ata.c  ata.cpp  ide.h
kernel/drivers/bga/: Kconfig  Makefile  bga.c  bga.cpp
kernel/drivers/bochsvga/: bochsvga.c
kernel/drivers/e1000/: BUILD.gn  Makefile  e1000.c  e1000.cpp  e1000.h
kernel/drivers/example/: Makefile  main.c
kernel/drivers/ext2/: Makefile  alloc.c  block_groups.c  ext2.c  ext2_ll.c  inode.c  symlink.c
kernel/drivers/firmware/: Kconfig  Makefile
kernel/drivers/igd/: Makefile  igd_display.c  igd_display.cpp  igd_displayport.c  igd_displayport.cpp  igd_gtt.c  igd_gtt.cpp  igd_opregion.h  igd_pipe.c  igd_pipe.cpp  igd_pipe.h  igd_plane.c  igd_plane.cpp  igd_power.c  igd_power.cpp  igd_transcoder.c  igd_transcoder.cpp  igpu_drv.h  igpu_i2c.c  igpu_i2c.cpp  intel_regs.h  main.c  main.cpp  opregion.c  opregion.cpp  vbt.c  vbt.cpp  vbt.h
kernel/drivers/ihdgpu/: Makefile  igd_display.c  igd_displayport.c  igd_pipe.c  igd_pipe.h  igd_power.c  igpu_drv.h  igpu_i2c.c  intel_regs.h  main.c  opregion.c  vbt.c  vbt.h
kernel/include/: fdt.h  fonts.h  fractions.h  gpt.h  libfdt.h  libfdt_env.h  mbr.h  multiboot.h  multiboot2.h  partitions.h  proc_event.h  pthread_kernel.h
kernel/kernel/: .directory  .gitignore  .kernel.c.swp  .kheap.c.kate-swp  BUILD.gn  ElfLoader.cpp  Kconfig  Makefile  acpi.c  acpi.cpp  acpi_osl.c  acpi_osl.cpp  acpica_port.c  arc4random.c  arc4random.cpp  arp.c  binfmt.c  binfmt.cpp  block.c  bootmem.c  bug.cpp  cmdline.c  cmdline.cpp  compression.cpp  copy.c  copy.cpp  cpio.c  cppnew.cpp  cpprt.c  cpprt.cpp  cputime.cpp  crc32.c  crc32.cpp  cred.c  cred.cpp  ctor.cpp  cxxabi.cpp  dev.c  dev.cpp  dhcp.c  (+156 more)
kernel/lib/: Kconfig
kernel/modules/: Makefile
kernel/scripts/: Kbuild.include  bdf2c.py
kernel/trace/: gentrace.py  trace_dentry.json  trace_filemap.json  trace_irq.json  trace_rcupdate.json  trace_refcount.json  trace_sched.json  trace_vm.json  trace_writeback.json
usystem/: BUILD.gn  Makefile  copy_packages.sh  uncompress_packages.sh
usystem/core/: BUILD.gn
usystem/dash/: .gitignore  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac
usystem/devmgr/: devmgr.service
usystem/filesystem/: BUILD.gn
usystem/init/: BUILD.gn  main.c  multi-user.target
usystem/json/: BUILD.gn
usystem/kernel_api_tests/: BUILD.gn
usystem/netctld/: BUILD.gn  dhcpcd.cpp  dhcpcd.hpp  netctl.cpp  profile.md
usystem/network/: BUILD.gn
usystem/singularity/: Makefile  main.cpp  singularity
usystem/strace/: Makefile  errnos.h  main.c  strace  syscalls.c
usystem/system_benchmark/: BUILD.gn
usystem/tests/: BUILD.gn
usystem/testsuite/: Makefile
usystem/utils/: BUILD.gn
usystem/wserver/: Makefile  buffer.cpp  client.cpp  display.cpp  main.cpp  server.cpp  window.cpp  wserver
(+2374 files in other folders)
