group("base_system") {
  deps = [ "//kernel" ]
}

group("system_packages") {
  deps = [
    ":base_system",
    "//src/core",
    "//src/filesystem",
    "//src/network",
    "//src/tests",
  ]
}

generated_file("build_sys_image_manifest") {
  deps = [ ":system_packages", ":base_system" ]
  data_keys = [ "system_image_file" ]
  output_conversion = "json"
  outputs = [ "$target_out_dir/sys_image_manifest.json" ]
}

action("build_sys_image") {
  deps = [ ":build_sys_image_manifest" ]
  manifest = "$target_out_dir/sys_image_manifest.json"
  sources = [ manifest ]
  script = "//build/image/make_sys_image.py"

  sysroot_path = "$target_out_dir/sysroot/"

  outputs = [ sysroot_path ]

  args = [
    "--manifest",
    rebase_path(manifest, root_build_dir),
    "-o",
    rebase_path(sysroot_path, root_build_dir),
  ]
}

group("system") {
  deps = [ ":build_sys_image" ]
}
