#
# Copyright (c) 2021 Pedro Falcato
# This file is part of Onyx, and is released under the terms of the MIT License
# check LICENSE at the root directory for more information
#

import("//build/toolchain/base_system_toolchain.gni")
import("//build/sdk.gni")

if(current_toolchain == default_toolchain) {
  base_system_toolchain("kernel_toolchain") {

  }
}

if(base_system_toolchain != false) {

config("kernel_headers") {
  include_dirs = [
    "include",
    "include/acpica",
  ]
}

config("kernel_config") {
  defines = [
    "__is_onyx_kernel",
    "_POSIX_C_SOURCE",
    "_BSD_SOURCE",
    "_GNU_SOURCE",
    "ACPI_LIBRARY",
  ]
  config_header = rebase_path("include/onyx/config.h")

  cflags = [
    "-imacros",
    "$config_header",
    "-ffreestanding",
    "-fbuiltin",
    "-Wall",
    "-Wextra",
    "-fstack-protector-strong",
    "-Wno-unused-parameter",
    "-Wno-unused-function",
    "-Wno-error=frame-address",
    "-Wno-address-of-packed-member",
    "-Wno-error=invalid-offsetof",
    "-fvisibility=protected",
    "-Wno-missing-field-initializers",
    "-Wstrict-aliasing",
    "-fno-pie",
    "-fno-unwind-tables",
    "-fno-asynchronous-unwind-tables",
    "-static",
    "-frecord-gcc-switches"
  ]

  cflags_cc = [
    "-fno-rtti",
    "-fno-exceptions",
    "-fcheck-new",
  ]

  cflags_c = [ "-std=c11" ]

  if (!is_clang) {
    cflags += [
      "-Wno-format-truncation",
      "-Wshadow-compatible-local",
    ]
  } else {
    cflags += [
      "-Wno-null-pointer-arithmetic",
      "-Wno-unknown-attributes",
      "-Wno-error=unused-private-field",
      "-Wno-missing-braces",
      "-Wno-c99-designator",
    ]
  }

  ldflags = [
    "-fkeep-inline-functions",
    "-Wl,--build-id=none",
    "-nostdlib",
    "-static"
  ]

  libs = []

  if (is_clang) {
    ldflags += [
      "-fno-sanitize-link-runtime",
      "-Wl,-no-pie",
    ]
  } else {
    ldflags += [ "-no-pie" ]
    # TODO: Fix this
    # We need to add crt{begin, end}S.o to the command line, with correct ordering
    # I'm not sure if GN lets us pick the ordering, but it would help a lot considering
    # crti/n and crtbegin/end all have their weird section ordering issues (this is all insane!)
    # A decent idea is to completely discard legacy _init() and use init_array exclusively (which requires us to
    # touch the toolchain build, to force --enable-init-fini-array since it defaults to no under cross compilation).
    libs += [ "gcc" ]
  }

  configs = [
    "arch/${target_cpu}:arch_config",
    ":kernel_headers",
  ]

  if (CONFIG_KASAN) {
    configs += [ ":asan_config" ]
  }

  if (CONFIG_UBSAN) {
    configs += [ ":ubsan_config" ]
  }

  asmflags = cflags
}

config("werror_config") {
  cflags = [ "-Werror" ]
}

config("asan_config") {
  cflags = [ "-fsanitize=address" ]

  # fsanitize arguments (may) need to be passed to the linker
  # at least they're always passed in userland builds
  ldflags = cflags

  # Fun stuff I disabled
  # TODO: Remove -asan-instrumentation-with-call-threshold=0 when ASAN is able to be inlined
  if (is_clang) {
    cflags += [
      "-mllvm",
      "-asan-instrumentation-with-call-threshold=0",
      "-mllvm",
      "-asan-globals-live-support=false",
    ]
    cflags += [
      "-mllvm",
      "-asan-stack=0",
      "-mllvm",
      "-asan-globals=0",
    ]
  } else {
    cflags += [
      "--param",
      "asan-globals=0",
      "--param",
      "asan-instrumentation-with-call-threshold=0",
      "--param",
      "asan-stack=0",
      "--param",
      "asan-globals=0",
    ]
  }
}

config("ubsan-config") {
  cflags = [
    "-fsanitize=undefined",
    "-fno-sanitize=alignment",
    "-fno-sanitize=pointer-overflow",
  ]
  ldflags = cflags
}

executable("vmonyx") {
  configs += [ ":kernel_config" ]

  linker_script = rebase_path("arch/${target_cpu}/linker.ld")
  inputs = [ linker_script ]

  ldflags = [
    "-Wl,-T",
    linker_script,
  ]

  deps = [
    "acpica",
    "arch/${target_cpu}:arch_sources",
    "drivers",
    "kernel",
  ]

  deps += [ "lib/libk:k" ]
}

group("kernel") {
  deps = [ ":vmonyx" ]
}

}
else
{

group("kernel") {
  deps = [ ":vmonyx(:${target_cpu}-kernel_toolchain)" ]
}

sdk_resource("headers") {
  sources = ["include/mbr.h",
"include/fonts.h",
"include/gpt.h",
"include/acpica/acrestyp.h",
"include/acpica/acutils.h",
"include/acpica/platform/acintel.h",
"include/acpica/platform/acdragonflyex.h",
"include/acpica/platform/acnetbsd.h",
"include/acpica/platform/acos2.h",
"include/acpica/platform/acgcc.h",
"include/acpica/platform/acgccex.h",
"include/acpica/platform/acmsvcex.h",
"include/acpica/platform/acwin64.h",
"include/acpica/platform/acenvex.h",
"include/acpica/platform/acqnx.h",
"include/acpica/platform/acwin.h",
"include/acpica/platform/acenv.h",
"include/acpica/platform/acdragonfly.h",
"include/acpica/platform/acefiex.h",
"include/acpica/platform/acfreebsd.h",
"include/acpica/platform/accygwin.h",
"include/acpica/platform/achaiku.h",
"include/acpica/platform/acmacosx.h",
"include/acpica/platform/acefi.h",
"include/acpica/platform/acmsvc.h",
"include/acpica/platform/aclinuxex.h",
"include/acpica/platform/aclinux.h",
"include/acpica/platform/aconyx.h",
"include/acpica/acuuid.h",
"include/acpica/acapps.h",
"include/acpica/accommon.h",
"include/acpica/acpi.h",
"include/acpica/acmacros.h",
"include/acpica/acopcode.h",
"include/acpica/acconfig.h",
"include/acpica/acevents.h",
"include/acpica/acclib.h",
"include/acpica/acresrc.h",
"include/acpica/actbl1.h",
"include/acpica/acconvert.h",
"include/acpica/acinterp.h",
"include/acpica/acpiosxf.h",
"include/acpica/aclocal.h",
"include/acpica/acpixf.h",
"include/acpica/acbuffer.h",
"include/acpica/acdispat.h",
"include/acpica/actypes.h",
"include/acpica/actbl2.h",
"include/acpica/acnamesp.h",
"include/acpica/amlcode.h",
"include/acpica/acglobal.h",
"include/acpica/actbl.h",
"include/acpica/acstruct.h",
"include/acpica/achware.h",
"include/acpica/actbinfo.h",
"include/acpica/acnames.h",
"include/acpica/acparser.h",
"include/acpica/acexcep.h",
"include/acpica/acoutput.h",
"include/acpica/actables.h",
"include/acpica/acpredef.h",
"include/acpica/acdisasm.h",
"include/acpica/actbl3.h",
"include/acpica/acdebug.h",
"include/acpica/acobject.h",
"include/acpica/amlresrc.h",
"include/fixed_point/fixed_point.h",
"include/fixed_point/fixed_point_debug.h",
"include/pci/pci.h",
"include/pci/pci-msi.h",
"include/pci/pcie.h",
"include/proc_event.h",
"include/pthread_kernel.h",
"include/libtest/libtest.h",
"include/onyx/init.h",
"include/onyx/scheduler.h",
"include/onyx/cputime.h",
"include/onyx/dentry.h",
"include/onyx/tty.h",
"include/onyx/intrinsics.h",
"include/onyx/net/ipv6.h",
"include/onyx/net/inet_proto.h",
"include/onyx/net/inet_sock_addr.h",
"include/onyx/net/inet_socket.h",
"include/onyx/net/dll.h",
"include/onyx/net/udp.h",
"include/onyx/net/ndp.h",
"include/onyx/net/tcp.h",
"include/onyx/net/icmpv6.h",
"include/onyx/net/netkernel.h",
"include/onyx/net/proto_family.h",
"include/onyx/net/ip.h",
"include/onyx/net/inet_proto_family.h",
"include/onyx/net/socket.h",
"include/onyx/net/inet_route.h",
"include/onyx/net/inet_csum.h",
"include/onyx/net/socket_table.h",
"include/onyx/net/network.h",
"include/onyx/net/neighbour.h",
"include/onyx/net/ethernet.h",
"include/onyx/net/arp.h",
"include/onyx/net/inet_packet_flow.h",
"include/onyx/net/icmp.h",
"include/onyx/net/netif.h",
"include/onyx/net/inet_cork.h",
"include/onyx/internal_abi.h",
"include/onyx/ref.h",
"include/onyx/port_io.h",
"include/onyx/atomic.h",
"include/onyx/handle.h",
"include/onyx/majorminor.h",
"include/onyx/timer.h",
"include/onyx/driver.h",
"include/onyx/x86/intrinsics.h",
"include/onyx/x86/isr.h",
"include/onyx/x86/mce.h",
"include/onyx/x86/port_io.h",
"include/onyx/x86/pit.h",
"include/onyx/x86/msr.h",
"include/onyx/x86/apic.h",
"include/onyx/x86/control_regs.h",
"include/onyx/x86/signal.h",
"include/onyx/x86/idt.h",
"include/onyx/x86/kvm.h",
"include/onyx/x86/nmi.h",
"include/onyx/x86/eflags.h",
"include/onyx/x86/gdt.h",
"include/onyx/x86/platform_info.h",
"include/onyx/x86/tsc.h",
"include/onyx/x86/pat.h",
"include/onyx/x86/avx.h",
"include/onyx/x86/include/platform/internal_abi.h",
"include/onyx/x86/include/platform/page.h",
"include/onyx/x86/include/platform/vm_layout.h",
"include/onyx/x86/include/platform/vm.h",
"include/onyx/x86/include/platform/syscall.h",
"include/onyx/x86/include/platform/irq.h",
"include/onyx/x86/segments.h",
"include/onyx/x86/pic.h",
"include/onyx/x86/ktrace.h",
"include/onyx/x86/percpu.h",
"include/onyx/x86/alternatives.h",
"include/onyx/random.h",
"include/onyx/exec.h",
"include/onyx/arch.h",
"include/onyx/mm/vm_object.h",
"include/onyx/mm/kasan.h",
"include/onyx/mm/shm.h",
"include/onyx/mm/flush.h",
"include/onyx/conditional.h",
"include/onyx/initrd.h",
"include/onyx/page_iov.h",
"include/onyx/page.h",
"include/onyx/platform.h",
"include/onyx/modules.h",
"include/onyx/heap.h",
"include/onyx/array_iterator.h",
"include/onyx/elf.h",
"include/onyx/thread.h",
"include/onyx/acpi.h",
"include/onyx/groups.h",
"include/onyx/power_management.h",
"include/onyx/signal.h",
"include/onyx/copy.h",
"include/onyx/wait_queue.h",
"include/onyx/serial.h",
"include/onyx/vm_layout.h",
"include/onyx/rwlock.h",
"include/onyx/tss.h",
"include/onyx/user.h",
"include/onyx/kernelinfo.h",
"include/onyx/photon.h",
"include/onyx/vdso.h",
"include/onyx/pseudo.h",
"include/onyx/symbol.h",
"include/onyx/dma.h",
"include/onyx/log.h",
"include/onyx/itimer.h",
"include/onyx/vm.h",
"include/onyx/array.h",
"include/onyx/bootmem.h",
"include/onyx/hybrid_lock.h",
"include/onyx/pipe.h",
"include/onyx/input/state.h",
"include/onyx/input/device.h",
"include/onyx/input/keys.h",
"include/onyx/input/event.h",
"include/onyx/worker.h",
"include/onyx/i2c.h",
"include/onyx/cred.h",
"include/onyx/framebuffer.h",
"include/onyx/refcount.h",
"include/onyx/bus_type.h",
"include/onyx/new.h",
"include/onyx/utf8.h",
"include/onyx/auto_resource.h",
"include/onyx/spinlock.h",
"include/onyx/tmpfs.h",
"include/onyx/file.h",
"include/onyx/public/handle.h",
"include/onyx/public/power_management.h",
"include/onyx/public/cred.h",
"include/onyx/public/netkernel.h",
"include/onyx/public/socket.h",
"include/onyx/public/process.h",
"include/onyx/public/memstat.h",
"include/onyx/public/icmp.h",
"include/onyx/dpc.h",
"include/onyx/scoped_lock.h",
"include/onyx/list.h",
"include/onyx/poll.h",
"include/onyx/id.h",
"include/onyx/smp.h",
"include/onyx/paging.h",
"include/onyx/proc_event.h",
"include/onyx/fnv.h",
"include/onyx/cpumask.h",
"include/onyx/clock.h",
"include/onyx/bitmap.h",
"include/onyx/superblock.h",
"include/onyx/vfs.h",
"include/onyx/sysfs.h",
"include/onyx/semaphore.h",
"include/onyx/video.h",
"include/onyx/disassembler.h",
"include/onyx/photon-cookies.h",
"include/onyx/pid.h",
"include/onyx/culstring.h",
"include/onyx/riscv/intrinsics.h",
"include/onyx/riscv/include/platform/page.h",
"include/onyx/riscv/include/platform/vm_layout.h",
"include/onyx/riscv/include/platform/vm.h",
"include/onyx/riscv/include/platform/syscall.h",
"include/onyx/riscv/include/platform/irq.h",
"include/onyx/riscv/percpu.h",
"include/onyx/ioctx.h",
"include/onyx/debug.h",
"include/onyx/remove_extent.h",
"include/onyx/crc32.h",
"include/onyx/is_integral.h",
"include/onyx/softirq.h",
"include/onyx/integral_constant.h",
"include/onyx/process.h",
"include/onyx/mutex.h",
"include/onyx/async_io.h",
"include/onyx/binfmt.h",
"include/onyx/byteswap.h",
"include/onyx/utils.h",
"include/onyx/crypt/sha256.h",
"include/onyx/pagecache.h",
"include/onyx/object.h",
"include/onyx/enable_if.h",
"include/onyx/module.h",
"include/onyx/wait.h",
"include/onyx/task_switching.h",
"include/onyx/futex.h",
"include/onyx/image.h",
"include/onyx/fpu.h",
"include/onyx/condvar.h",
"include/onyx/binfmt/elf64.h",
"include/onyx/packetbuf.h",
"include/onyx/buffer.h",
"include/onyx/ptrace.h",
"include/onyx/smbios.h",
"include/onyx/dev.h",
"include/onyx/config.h",
"include/onyx/no_port_io.h",
"include/onyx/mmio.h",
"include/onyx/yield.h",
"include/onyx/block.h",
"include/onyx/ktrace.h",
"include/onyx/cpu.h",
"include/onyx/vector.h",
"include/onyx/video/edid.h",
"include/onyx/panic.h",
"include/onyx/font.h",
"include/onyx/mtable.h",
"include/onyx/percpu.h",
"include/onyx/exceptions.h",
"include/onyx/compiler.h",
"include/onyx/syscall.h",
"include/onyx/irq.h",
"include/onyx/smp_sync_control.h",
"include/onyx/registers.h",
"include/partitions.h",
"include/libdict/tree_common.h",
"include/libdict/dict.h",
"include/libdict/wb_tree.h",
"include/libdict/rb_tree.h",
"include/fractions.h",
"include/multiboot2.h",
"include/photon/photon-types.h",
]

  outputs = ["usr/include/{{source_file_part}}"]
}

}
