import("//build/kernel/kernel_sources.gni")
kernel_source_set("kernel") {
  sources = [
    "acpi.cpp",
    "acpi_osl.cpp",
    "arc4random.c",
    "binfmt.cpp",
    "cmdline.cpp",
    "copy.cpp",
    "cppnew.cpp",
    "cpprt.cpp",
    "cputime.cpp",
    "crc32.cpp",
    "cred.cpp",
    "ctor.cpp",
    "dev.cpp",
    "dma.cpp",
    "dpc.cpp",
    "driver.cpp",
    "exceptions.cpp",
    "font.cpp",
    "fonts/font.c",
    "framebuffer.cpp",
    "futex.cpp",
    "handle.cpp",
    "i2c.cpp",
    "id_manager.cpp",
    "init.cpp",
    "initrd.cpp",
    "internal_abi.cpp",
    "irq.cpp",
    "kernelinfo.cpp",
    "kernlog.cpp",
    "ktest.cpp",
    "ktrace.cpp",
    "list.cpp",
    "mmio_utils.cpp",
    "modules.cpp",
    "object.cpp",
    "panic.cpp",
    "percpu.cpp",
    "pid.cpp",
    "power_management.cpp",
    "proc_event.cpp",
    "process.cpp",
    "ptrace.cpp",
    "random.cpp",
    "ref.cpp",
    "rlimit.cpp",
    "signal.cpp",
    "smp.cpp",
    "softirq.cpp",
    "spinlock.cpp",
    "ssp.cpp",
    "symbol.cpp",
    "time.cpp",
    "timer.cpp",
    "utils.cpp",
    "wait_queue.cpp",
    "worker.cpp",
  ]

  if (CONFIG_UBSAN) {
    sources += [ "ubsan.c" ]
  }

  public_deps = [
    "binfmt",
    "fs",
    "input",
    "libdict",
    "mm",
    "net",
    "photon",
    "sched",
    "time",
    "tty",
  ]
}
