import("//build/package.gni")

config("init_config") {
  cflags = [ "-static" ]
  ldflags = [ "-static" ]
}

executable("initd_bin") {
  include_dirs = [ "include" ]

  output_name = "init"
  configs += [ ":init_config" ]

  sources = [
    "daemon.c",
    "main.c",
  ]
}

resource("initd_rule") {
  sources = [
    "default.target",
    "multi-user.target",
  ]
  outputs = [ "etc/init.d/targets/{{source_file_part}}" ]
}

resource("initd_docs") {
  sources = [ "init.8" ]
  outputs = [ "usr/share/man/man8/init.8" ]
}

package("init") {
  deps = [
    ":initd_bin",
    ":initd_docs",
    ":initd_rule",
  ]

  is_system_binary = true
  executables = [ "init" ]
}
