import("//build/app.gni")

app_executable("kernel_api_tests") {
  package_name = "kernel_api_tests"
  output_name = "$package_name"

  sources = [
    "src/exit.cpp",
    "src/nullzero.cpp",
    "src/pgrp.cpp",
    "src/rlimit.cpp",
    "src/sid.cpp",
    "src/wait.cpp",
  ]
  deps = [ "//src/googletest:gtest_main" ]
}
